<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.jartcorp.hnoss.activity.LoginFragment"
    >

    <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/LoginLogo"
        android:src="@drawable/login"
        android:layout_above="@+id/logAccount"
        android:layout_alignLeft="@+id/LogBtn"
        android:layout_alignStart="@+id/LogBtn" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/logAccount"
        android:hint="@string/account"
        android:layout_above="@+id/logPassword"
        android:layout_alignLeft="@+id/logPassword"
        android:layout_alignStart="@+id/logPassword"
        android:layout_marginBottom="53dp"
        android:layout_marginTop="60dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/logPassword"
        android:hint="@string/password"
        android:layout_above="@+id/LogBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textSize="30dp"
        android:id="@+id/LogBtn"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/ResGO"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:id="@+id/ResGO"
        android:autoLink="none"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/LogBtn"
        android:layout_toEndOf="@+id/LogBtn"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        android:onClick= "Resguser"/>


</RelativeLayout>
